# serializer version: 1
# name: test_mention_for_inactive_user
  '<p>this <span class="rich-text-mention-not-found" misago-rich-text-mention="inactive-user">@Inactive_User</span> is inactive</p>'
# ---
# name: test_mention_for_not_found_user
  '<p>this <span class="rich-text-mention-not-found" misago-rich-text-mention="user">@User</span> doesn’t exist</p>'
# ---
